# taxi-v3

./: README.md  pyproject.toml  requirements.txt
best_checkpoints/: dqn_taxi_ep_100.pt  dqn_taxi_ep_1000.pt  dqn_taxi_ep_200.pt  dqn_taxi_ep_300.pt  dqn_taxi_ep_400.pt  dqn_taxi_ep_500.pt  dqn_taxi_ep_600.pt  dqn_taxi_ep_700.pt  dqn_taxi_ep_800.pt  dqn_taxi_ep_900.pt  dqn_taxi_final.pt
best_results/: testing_rewards.csv  training_rewards.csv
configs/: agent.yaml  test.yaml  train.yaml
src/taxi_dqn/: main.py
src/taxi_dqn/utils/: agent.py  environment.py  graphs.py  replay_buffer.py
