[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxi-dqn"
version = "1.0.0"
description = "DQN agent for Taxi-v3 Gymnasium Environment"
authors = [{name="Radoslaw Kamil Izak", email="izakradoslaw@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
taxi-main = "taxi_dqn.main:main"
